--- a/sdbx-main/Cargo.toml
+++ b/sdbx-main/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 sdbx-module-concept = "0.1.0"
+sdbx-generics-concept = "0.1.0"
 sdbx-commons = "0.1.0"
 log = { version = "0.4", features = [ "max_level_debug", "release_max_level_info" ] }
 
