--- a/sdbx-macros/Cargo.toml
+++ b/sdbx-macros/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "sdbx-commons"
+name = "sdbx-macros"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdbx-macros = "0.1.0"
-introduce-macro-derive = "0.1.0"
