--- a/sdbx-main/Cargo.toml
+++ b/sdbx-main/Cargo.toml
@@ -9,7 +9,10 @@ edition = "2021"
 sdbx-module-concept = "0.1.0"
 sdbx-generics-concept = "0.1.0"
 sdbx-commons = "0.1.0"
+sdbx-macros = "0.1.0"
+introduce-macro-derive = "0.1.0"
 log = { version = "0.4", features = [ "max_level_debug", "release_max_level_info" ] }
+bitflags = "1.3"
 
 
 [[bin]]
