--- a/sdbx-main/Cargo.toml
+++ b/sdbx-main/Cargo.toml
@@ -11,6 +11,7 @@ sdbx-generics-concept = "0.1.0"
 sdbx-commons = "0.1.0"
 sdbx-macros = "0.1.0"
 introduce-macro-derive = "0.1.0"
+sdbx-shared = { version = "0.1.0"}
 log = { version = "0.4", features = [ "max_level_debug", "release_max_level_info" ] }
 bitflags = "1.3"
 
